--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 certifi==2025.1.31
+chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 filelock==3.17.0
@@ -26,9 +27,11 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 packaging==24.2
+pillow==11.1.0
 PyMuPDF==1.25.3
 PyYAML==6.0.2
 regex==2024.11.6
+reportlab==4.3.1
 requests==2.32.3
 sacremoses==0.1.1
 safetensors==0.5.2
