--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 certifi==2025.1.31
+cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.1
 filelock==3.17.0
 fsspec==2025.2.0
 huggingface-hub==0.28.1
@@ -27,8 +29,11 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 packaging==24.2
+pdfminer.six==20231228
+pdfplumber==0.11.5
 pillow==11.1.0
-PyMuPDF==1.25.3
+pycparser==2.22
+pypdfium2==4.30.1
 PyYAML==6.0.2
 regex==2024.11.6
 reportlab==4.3.1
